fix alignment, new header color, better footer and h2

--- a/static/style.css
+++ b/static/style.css
@@ -38,20 +38,15 @@ div.transbox, div.registry, div.info{
 }
 
 div.info{
-    height: 70%;
+    /* height: 70%; */
+    height: calc(100% - 6em);
     top: 3em;
-    /* position: relative; */
-    /* width: 90%; */
-    /* margin-top: 10%; */
-    /* margin-bottom: 3em; */
-    /* overscroll-behavior: contain; */
+    background: rgba(0, 0, 0, 0.75);
     overflow-y: scroll;
     color: white;
     text-align: center;
     font-size: 100%;
     padding: 0;
-    /* padding-left: 1em; */
-    /* padding-right: 1em; */
 }
 p.info{
     padding-left: 1em;
@@ -71,11 +66,17 @@ div.footer {
     left: 0;
     bottom: 0;
     width: 100%;
+    height: 2em;
     background: rgba(0, 0, 0, 0.5);
     color: white;
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
+h2{
+    color: darkgrey;
+}
 /* Setup a nice header */
 .header {
     position: fixed;
@@ -99,7 +100,7 @@ div.footer {
 }
 .header a:link, a:visited {
     color: white;
-    background-color: #f44336;
+    background-color: darkslategrey;
     text-decoration: none;
     padding: 0.25em;
 }
